@@ -1,3 +1,9 @@
+2007-04-26  Roland McGrath  <roland@redhat.com>
+
+	* alpha_regs.c: New file.
+	* Makefile.am (alpha_SRCS): Add it.
+	* alpha_init.c (alpha_init): Initialize register_info hook.
+
 2007-04-22  Roland McGrath  <roland@redhat.com>
 
 	* ppc_regs.c (ppc_register_info): Use some names instead of sprNNN:
